--- a/editor/translations/id.po
+++ b/editor/translations/id.po
@@ -708,8 +708,9 @@ msgid "Line Number:"
 msgstr "Nomor Baris:"
 
 #: editor/code_editor.cpp
-msgid "Replaced %d occurrence(s)."
-msgstr "kejadian %d diganti."
+#, fuzzy
+msgid "%d replaced."
+msgstr "Gantikan..."
 
 #: editor/code_editor.cpp editor/editor_help.cpp
 msgid "%d match."
@@ -5850,12 +5851,13 @@ msgid "Mesh is empty!"
 msgstr "Mesh kosong!"
 
 #: editor/plugins/mesh_instance_editor_plugin.cpp
-msgid "Create Static Trimesh Body"
-msgstr "Buat Badan Trimesh Statis"
+#, fuzzy
+msgid "Couldn't create a Trimesh collision shape."
+msgstr "Buat Trimesh Collision Sibling"
 
 #: editor/plugins/mesh_instance_editor_plugin.cpp
-msgid "Create Static Convex Body"
-msgstr "Buat Bodi Cembung Statis"
+msgid "Create Static Trimesh Body"
+msgstr "Buat Badan Trimesh Statis"
 
 #: editor/plugins/mesh_instance_editor_plugin.cpp
 msgid "This doesn't work on scene root!"
@@ -5866,11 +5868,30 @@ msgid "Create Trimesh Static Shape"
 msgstr "Buat Bentuk Trimesh Statis"
 
 #: editor/plugins/mesh_instance_editor_plugin.cpp
-msgid "Failed creating shapes!"
-msgstr "Gagal membuat bentuk!"
+msgid "Can't create a single convex collision shape for the scene root."
+msgstr ""
 
 #: editor/plugins/mesh_instance_editor_plugin.cpp
-msgid "Create Convex Shape(s)"
+msgid "Couldn't create a single convex collision shape."
+msgstr ""
+
+#: editor/plugins/mesh_instance_editor_plugin.cpp
+#, fuzzy
+msgid "Create Single Convex Shape"
+msgstr "Buat Bentuk Cembung"
+
+#: editor/plugins/mesh_instance_editor_plugin.cpp
+msgid "Can't create multiple convex collision shapes for the scene root."
+msgstr ""
+
+#: editor/plugins/mesh_instance_editor_plugin.cpp
+#, fuzzy
+msgid "Couldn't create any collision shapes."
+msgstr "Tidak dapat membuat folder."
+
+#: editor/plugins/mesh_instance_editor_plugin.cpp
+#, fuzzy
+msgid "Create Multiple Convex Shapes"
 msgstr "Buat Bentuk Cembung"
 
 #: editor/plugins/mesh_instance_editor_plugin.cpp
@@ -5922,16 +5943,55 @@ msgid "Create Trimesh Static Body"
 msgstr "Buat Tubuh Statis Trimesh"
 
 #: editor/plugins/mesh_instance_editor_plugin.cpp
+msgid ""
+"Creates a StaticBody and assigns a polygon-based collision shape to it "
+"automatically.\n"
+"This is the most accurate (but slowest) option for collision detection."
+msgstr ""
+
+#: editor/plugins/mesh_instance_editor_plugin.cpp
 msgid "Create Trimesh Collision Sibling"
 msgstr "Buat Trimesh Collision Sibling"
 
 #: editor/plugins/mesh_instance_editor_plugin.cpp
-msgid "Create Convex Collision Sibling(s)"
+msgid ""
+"Creates a polygon-based collision shape.\n"
+"This is the most accurate (but slowest) option for collision detection."
+msgstr ""
+
+#: editor/plugins/mesh_instance_editor_plugin.cpp
+#, fuzzy
+msgid "Create Single Convex Collision Siblings"
 msgstr "Buat Convex Collision Sibling"
+
+#: editor/plugins/mesh_instance_editor_plugin.cpp
+msgid ""
+"Creates a single convex collision shape.\n"
+"This is the fastest (but least accurate) option for collision detection."
+msgstr ""
+
+#: editor/plugins/mesh_instance_editor_plugin.cpp
+#, fuzzy
+msgid "Create Multiple Convex Collision Siblings"
+msgstr "Buat Convex Collision Sibling"
+
+#: editor/plugins/mesh_instance_editor_plugin.cpp
+msgid ""
+"Creates a polygon-based collision shape.\n"
+"This is a performance middle-ground between the two above options."
+msgstr ""
 
 #: editor/plugins/mesh_instance_editor_plugin.cpp
 msgid "Create Outline Mesh..."
 msgstr "Buat Garis Mesh..."
+
+#: editor/plugins/mesh_instance_editor_plugin.cpp
+msgid ""
+"Creates a static outline mesh. The outline mesh will have its normals "
+"flipped automatically.\n"
+"This can be used instead of the SpatialMaterial Grow property when using "
+"that property isn't possible."
+msgstr ""
 
 #: editor/plugins/mesh_instance_editor_plugin.cpp
 msgid "View UV1"
@@ -8349,7 +8409,7 @@ msgstr "TileSet"
 msgid "No VCS addons are available."
 msgstr "Tidak ada ekstensi VCS yang tersedia."
 
-#: editor/plugins/version_control_editor_plugin.cpp editor/rename_dialog.cpp
+#: editor/plugins/version_control_editor_plugin.cpp
 msgid "Error"
 msgstr "Galat"
 
@@ -9521,11 +9581,19 @@ msgid "Export With Debug"
 msgstr "Ekspor dengan Awakutu"
 
 #: editor/project_manager.cpp
-msgid "The path does not exist."
+#, fuzzy
+msgid "The path specified doesn't exist."
 msgstr "Lokasi ini tidak ada."
 
 #: editor/project_manager.cpp
-msgid "Invalid '.zip' project file, does not contain a 'project.godot' file."
+#, fuzzy
+msgid "Error opening package file (it's not in ZIP format)."
+msgstr "Gagal saat membuka paket, tidak dalam bentuk zip."
+
+#: editor/project_manager.cpp
+#, fuzzy
+msgid ""
+"Invalid \".zip\" project file; it doesn't contain a \"project.godot\" file."
 msgstr "Berkas proyek '.zip' tidak valid, tidak berisi berkas 'project.godot'."
 
 #: editor/project_manager.cpp
@@ -9533,11 +9601,13 @@ msgid "Please choose an empty folder."
 msgstr "Silakan pilih direktori kosong."
 
 #: editor/project_manager.cpp
-msgid "Please choose a 'project.godot' or '.zip' file."
+#, fuzzy
+msgid "Please choose a \"project.godot\" or \".zip\" file."
 msgstr "Silakan pilih berkas 'project.godot' atau '.zip'."
 
 #: editor/project_manager.cpp
-msgid "Directory already contains a Godot project."
+#, fuzzy
+msgid "This directory already contains a Godot project."
 msgstr "Direktori ini sudah berisi proyek Godot."
 
 #: editor/project_manager.cpp
@@ -10234,6 +10304,11 @@ msgid "Suffix"
 msgstr "Akhiran"
 
 #: editor/rename_dialog.cpp
+#, fuzzy
+msgid "Use Regular Expressions"
+msgstr "Ekspresi Reguler"
+
+#: editor/rename_dialog.cpp
 msgid "Advanced Options"
 msgstr "Opsi Lanjutan"
 
@@ -10270,7 +10345,8 @@ msgstr ""
 "Bandingkan opsi penghitung."
 
 #: editor/rename_dialog.cpp
-msgid "Per Level counter"
+#, fuzzy
+msgid "Per-level Counter"
 msgstr "Penghitung per Level"
 
 #: editor/rename_dialog.cpp
@@ -10302,10 +10378,6 @@ msgstr ""
 "Digit yang hilang diisi dengan angka nol di depan."
 
 #: editor/rename_dialog.cpp
-msgid "Regular Expressions"
-msgstr "Ekspresi Reguler"
-
-#: editor/rename_dialog.cpp
 msgid "Post-Process"
 msgstr "Pasca Proses"
 
@@ -10314,11 +10386,13 @@ msgid "Keep"
 msgstr "Pertahankan"
 
 #: editor/rename_dialog.cpp
-msgid "CamelCase to under_scored"
+#, fuzzy
+msgid "PascalCase to snake_case"
 msgstr "CamelCase ke under_score"
 
 #: editor/rename_dialog.cpp
-msgid "under_scored to CamelCase"
+#, fuzzy
+msgid "snake_case to PascalCase"
 msgstr "under_score ke CamelCase"
 
 #: editor/rename_dialog.cpp
@@ -10336,6 +10410,16 @@ msgstr "Jadikan Huruf Kapital"
 #: editor/rename_dialog.cpp
 msgid "Reset"
 msgstr "Reset"
+
+#: editor/rename_dialog.cpp
+#, fuzzy
+msgid "Regular Expression Error"
+msgstr "Ekspresi Reguler"
+
+#: editor/rename_dialog.cpp
+#, fuzzy
+msgid "At character %s"
+msgstr "Karakter sah:"
 
 #: editor/reparent_dialog.cpp editor/scene_tree_dock.cpp
 msgid "Reparent Node"
@@ -10801,7 +10885,8 @@ msgid "Invalid inherited parent name or path."
 msgstr "Nama atau lokasi parent yang diwariskan tidak valid."
 
 #: editor/script_create_dialog.cpp
-msgid "Script is valid."
+#, fuzzy
+msgid "Script path/name is valid."
 msgstr "Skrip valid."
 
 #: editor/script_create_dialog.cpp
@@ -10893,6 +10978,11 @@ msgid "Copy Error"
 msgstr "Salin Galat"
 
 #: editor/script_editor_debugger.cpp
+#, fuzzy
+msgid "Video RAM"
+msgstr "Memori Video"
+
+#: editor/script_editor_debugger.cpp
 msgid "Skip Breakpoints"
 msgstr "Lewati Breakpoint"
 
@@ -10939,10 +11029,6 @@ msgstr "Daftar Penggunaan Memori Video oleh Resource:"
 #: editor/script_editor_debugger.cpp
 msgid "Total:"
 msgstr "Total:"
-
-#: editor/script_editor_debugger.cpp
-msgid "Video Mem"
-msgstr "Memori Video"
 
 #: editor/script_editor_debugger.cpp
 msgid "Resource Path"
@@ -12571,6 +12657,15 @@ msgstr "Variasi hanya bisa ditetapkan dalam fungsi vertex."
 #: servers/visual/shader_language.cpp
 msgid "Constants cannot be modified."
 msgstr "Konstanta tidak dapat dimodifikasi."
+
+#~ msgid "Replaced %d occurrence(s)."
+#~ msgstr "kejadian %d diganti."
+
+#~ msgid "Create Static Convex Body"
+#~ msgstr "Buat Bodi Cembung Statis"
+
+#~ msgid "Failed creating shapes!"
+#~ msgstr "Gagal membuat bentuk!"
 
 #~ msgid ""
 #~ "There are currently no tutorials for this class, you can [color=$color]"
